all code updated

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Noctimago</string>
+     <string name="admob_app_id">ca-app-pub-2847186072494111~8751364810</string>
 </resources>
